# rpg-battle-monitoring-platform

./: LICENSE  notes.md  tema.md
RPGBattleMonitor/: .gitignore  Cargo.toml  package-lock.json  package.json  socketio-connection-test.html  vite.config.ts
RPGBattleMonitor/rpg_battle_monitor/: package-lock.json  package.json  vite.config.ts
RPGBattleMonitor/rpg_battle_monitor/src/: App.tsx  globals.ts  initUtil.ts
RPGBattleMonitor/rpg_battle_monitor/src-tauri/: Cargo.toml  tauri.conf.json
RPGBattleMonitor/rpg_battle_monitor_frontend/: build-tauri.sh  eslint.config.ts  index.html  package-lock.json  package.json  vite.config.ts
RPGBattleMonitor/rpg_battle_monitor_frontend/src/: App.css  App.tsx
RPGBattleMonitor/rpg_battle_monitor_frontend/src-tauri/: Cargo.toml  tauri.conf.json
RPGBattleMonitor/rpg_battle_monitor_lib/: Cargo.toml
RPGBattleMonitor/rpg_battle_monitor_lib/migrations/sqlite/: 20250617103115_initial.down.sql  20250617103115_initial.up.sql  20250624163715_thumbnails.down.sql  20250624163715_thumbnails.up.sql  20250708131903_initial_sheet.down.sql  20250708131903_initial_sheet.up.sql  20250716185531_board.up.sql  20250818113656_entity.down.sql  20250818113656_entity.up.sql  20250928165319_asset_original_filename.down.sql  20250928165319_asset_original_filename.up.sql
RPGBattleMonitor/rpg_battle_monitor_lib/src/: lib.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/api/: error.rs  mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/api/assets/: mod.rs  serve.rs  upload.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/api/doc/: mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/api/game/: mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/api/websockets/: mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/apidoc/: mod.rs  taggroups.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/cdn/: error.rs  mod.rs  upload.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/cdn/filesystem/: error.rs  local_adapter.rs  mod.rs  temp_file_adapter.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/cdn/model/: assets.rs  mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/cdn/routes/: mod.rs  serve.rs  upload.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/config/: error.rs  mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/database/: error.rs  mod.rs  setup.rs  transaction.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/entity/: error.rs  kind.rs  mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/extractors/: error.rs  local_fs_extractor.rs  mod.rs  transaction_extractor.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/game/: error.rs  mod.rs  utils.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/game/objects/: board.rs  game.rs  mod.rs  scene.rs  token.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/game/objects/sheet/: colour.rs  image.rs  mod.rs  number.rs  radio.rs  range.rs  select.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/model/: error.rs  mod.rs  model_manager.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/models/: assets.rs  board.rs  entity.rs  error.rs  game.rs  mod.rs  sheet.rs  thumbnails.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/thumbnail/: configuration.rs  error.rs  mod.rs  size.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/utils/: mod.rs  test_utils.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/: battle_monitor_server.rs  mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/database/: setup.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/extractors/: asset_extractor.rs  database_connection_extractor.rs  error.rs  local_fs_extractor.rs  mod.rs  transaction_extractor.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/router/: app_state.rs  battle_monitor_server.rs  global_router_state.rs  mod.rs  public_files_router.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/routes/: mod.rs  test_routes.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/routes/apidoc/: mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/routes/v1/: mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/src/webserver/services/: entity_queue.rs  mod.rs  scheduler.rs  websocket_auth.rs
RPGBattleMonitor/rpg_battle_monitor_lib/tests/: mod.rs
RPGBattleMonitor/rpg_battle_monitor_lib/tests/thumbnail/: mod.rs  thumbnails.rs
RPGBattleMonitor/rpg_battle_monitor_server/: .gitignore  Cargo.toml
RPGBattleMonitor/rpg_battle_monitor_server/.cargo/: config.toml
RPGBattleMonitor/rpg_battle_monitor_server/src/: main.rs
RPGBattleMonitor/server/: .env.example  .gitignore  Cargo.toml
RPGBattleMonitor/server/migrations_postgres/: 20240712064115_intial_users_and_rooms.up.sql
RPGBattleMonitor/server/migrations_sqlite/: 20240712064115_intial_users_and_rooms.down.sql  20240712064115_intial_users_and_rooms.up.sql
RPGBattleMonitor/server/src/: global_router_state.rs  lib.rs  main.rs
RPGBattleMonitor/server/src/database/: mod.rs
RPGBattleMonitor/server/src/error/: mod.rs
RPGBattleMonitor/server/src/game/: mod.rs
RPGBattleMonitor/server/src/models/: error.rs  ids.rs  mod.rs  room.rs
RPGBattleMonitor/server/src/monitor/: monitor.rs
RPGBattleMonitor/server/src/routes/: apidoc.rs  error.rs  mod.rs  room.rs
RPGBattleMonitor/server/src/socket/: payload.rs
RPGBattleMonitor/server/src/sockets/: message.rs
RPGBattleMonitor/src/: App.tsx  MyComponent.tsx  globals.ts  initUtil.ts  main.tsx
RPGBattleMonitor/src-tauri/: tauri.conf.json
RPGBattleMonitor/src-tauri/src/: main.rs
RPGBattleMonitor/tauri-frontend/: package-lock.json  package.json
docs/: .gitignore  build.sh  foi.cls  izrada_platforme_za_pracenje_bitke_u_igri_igranja_uloga.tex  lib.bib  main.tex
presentation/: present.html  present.md
rpg-battle-monitor-notes/: Entity kind.md  Entity queue.md  Joining a game.md  Plan.md  Save system.md  Technologies.md  Todo.md
rpg-battle-monitor-notes/.obsidian/: graph.json  workspace.json
rpg-battle-monitor-notes/Client <-> Server/: Basic websocket communication.md  Client.md  Server.md
rpg-battle-monitor-notes/Entities/: Room.md
rpg-battle-monitor-notes/Ui/: Windows.md
(+241 files in other folders)
