[package]
name = "rpg_battle_monitor_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3" }
sqlx = { version = "0.8.5", features = ["chrono", "migrate", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
ts-rs = "10.1.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[features]
default = ["api_v1", "api_v1_doc", "db_sqlite"]

api_v1 = []
api_v1_doc = []

db_sqlite = ["sqlx/sqlite"]
db_postgres = ["sqlx/postgres"]
