[package]
name = "rpg_battle_monitor_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
# socketioxide = { version = "0.16.2", features = ["tracing"] }
socketioxide = { path = "../../socketioxide/crates/socketioxide", features = [
    "tracing",
] }
axum = { version = "0.8.3", features = ["macros", "multipart"] }
sqlx = { version = "0.8.5", features = [
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
ts-rs = "10.1.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
futures-util = "0.3.31"
thiserror = "2.0.12"

[features]
default = ["api_v1", "api_v1_doc", "db_sqlite"]

api_v1 = []
api_v1_doc = []

db_sqlite = ["sqlx/sqlite"]
db_postgres = ["sqlx/postgres"]
