[package]
name = "rpg_battle_monitor_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
socketioxide = { version = "0.17.2", features = ["extensions", "state", "tracing"] }
axum = { version = "0.8.3", features = ["json", "macros", "multipart"] }
sqlx = { version = "0.8.5", features = [
    "any",
    "chrono",
    "migrate",
    "runtime-tokio-rustls",
] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
ts-rs = "10.1.0"
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "limit"] }
image = "0.25.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.10.0"
futures-util = "0.3.31"
thiserror = "2.0.12"
sha2 = "0.10.9"
url = "2.5.4"
chrono = { version = "0.4.41", features = ["serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite"] }
infer = "0.19.0"
dashmap = "6.1.0"
bevy_ecs = { version = "0.16.1", features = ["trace"] }
flate2 = "1.1.2"

[features]
default = ["db_sqlite", "api_doc"]

api_doc = []

db_sqlite = ["sqlx/sqlite"]
db_postgres = ["sqlx/postgres"]

[dev-dependencies]
axum-test = { version = "17.3.0", features = ["all"] }
sea-orm = { version = "1.1.12", features = ["sqlx-sqlite"] }
