[package]
name = "rpg-battle-monitor-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rpg_battle_monitor_lib"
path = "src/lib.rs"

[[bin]]
name = "rpg_battle_monitor_server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.80"
axum = { version = "0.7.5", features = ["ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
enfync = "0.1.6"
ezsockets = { version = "0.6.2", features = ["axum"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
serde = "1.0.203"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
socketioxide = { version = "0.14.0", features = ["tracing"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "migrate",
] }
dotenvy = "0.15.7"

[features]
default = ["db_sqlite"]

db_sqlite = ["sqlx/sqlite"]
db_postgres = ["sqlx/postgres"]
