[package]
name = "rpg-battle-monitor-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rpg_battle_monitor_lib"
path = "src/lib.rs"

[[bin]]
name = "rpg_battle_monitor_server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
serde = "1.0.203"
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "auth"] }
socketioxide = { version = "0.16", features = ["extensions", "tracing"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "migrate",
    "chrono",
] }
dotenvy = "0.15.7"
ulid = { version = "1.2", features = ["serde"] }
thiserror = "2"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
anyhow = { version = "1", features = ["backtrace"] }
mlua = { version = "0.10", features = ["anyhow", "luau", "luau-jit"] }

[features]
default = ["db_sqlite"]

db_sqlite = ["sqlx/sqlite"]
db_postgres = ["sqlx/postgres"]
